# iris-v0

./: CMakeLists.txt
examples/: hello_world.iris  hello_world.iris.c  person.iris  smallest.iris
src/: AstJsonSerializer.cpp  AstJsonSerializer.hpp  CCompiler.cpp  CCompiler.hpp  Diagnostics.cpp  Diagnostics.hpp  Environment.cpp  Environment.hpp  File.cpp  File.hpp  Lexer.cpp  Lexer.hpp  Message.cpp  Message.hpp  MessageTemplate.cpp  MessageTemplate.hpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Span.cpp  Span.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  TypeChecker.cpp  TypeChecker.hpp  common.hpp  diagnostic_messages.json.hpp  main.cpp
src/ast/: AssignExpr.cpp  AssignExpr.hpp  BinaryExpr.cpp  BinaryExpr.hpp  Block.cpp  Block.hpp  CallExpr.cpp  CallExpr.hpp  Decl.cpp  Decl.hpp  Expr.cpp  Expr.hpp  ExprStmt.cpp  ExprStmt.hpp  FnDecl.cpp  FnDecl.hpp  GroupExpr.cpp  GroupExpr.hpp  Identifier.cpp  Identifier.hpp  IfStmt.cpp  IfStmt.hpp  LetStmt.cpp  LetStmt.hpp  LiteralExpr.cpp  LiteralExpr.hpp  MutStmt.cpp  MutStmt.hpp  NameExpr.cpp  NameExpr.hpp  Node.cpp  Node.hpp  PipeExpr.cpp  PipeExpr.hpp  ReturnStmt.cpp  ReturnStmt.hpp  Stmt.cpp  Stmt.hpp  TranslationUnit.cpp  TranslationUnit.hpp  (+8 more)
src/types/: ErrorType.cpp  ErrorType.hpp  FnType.cpp  FnType.hpp  SimpleType.cpp  SimpleType.hpp  Type.cpp  Type.hpp  UnitType.cpp  UnitType.hpp  types.hpp
